--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
@@ -80,16 +80,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
-    <ClCompile Include="NewFolder1\camara.cpp" />
-    <ClCompile Include="NewFolder1\eseena.cpp" />
+    <ClCompile Include="ecena\camara.cpp" />
+    <ClCompile Include="ecena\eseena.cpp" />
+    <ClCompile Include="ray_tracing\rayo.cpp" />
+    <ClCompile Include="render\renderr.cpp" />
     <ClCompile Include="utilidades\vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="esenas\esena1.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="NewFolder1\camara.h" />
-    <ClInclude Include="NewFolder1\eseena.h" />
+    <ClInclude Include="ecena\camara.h" />
+    <ClInclude Include="ecena\eseena.h" />
+    <ClInclude Include="ray_tracing\rayo.h" />
+    <ClInclude Include="render\renderr.h" />
     <ClInclude Include="utilidades\vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
