--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
@@ -82,9 +82,12 @@
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="ecena\camara.cpp" />
     <ClCompile Include="ecena\eseena.cpp" />
+    <ClCompile Include="render\imagen.cpp" />
+    <ClCompile Include="render\pixel.cpp" />
     <ClCompile Include="ray_tracing\rayo.cpp" />
     <ClCompile Include="render\renderr.cpp" />
     <ClCompile Include="utilidades\vector3.cpp" />
+    <ClCompile Include="utilidades\vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="esenas\esena1.xml" />
@@ -92,9 +95,12 @@
   <ItemGroup>
     <ClInclude Include="ecena\camara.h" />
     <ClInclude Include="ecena\eseena.h" />
+    <ClInclude Include="render\imagen.h" />
+    <ClInclude Include="render\pixel.h" />
     <ClInclude Include="ray_tracing\rayo.h" />
     <ClInclude Include="render\renderr.h" />
     <ClInclude Include="utilidades\vector3.h" />
+    <ClInclude Include="utilidades\vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
