--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj.filters
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="utilidades\vector2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="luz.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="esenas\esena1.xml" />
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utilidades\vector2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="luz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
