--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="ecena\camara.cpp" />
     <ClCompile Include="ecena\eseena.cpp" />
     <ClCompile Include="luz.cpp" />
+    <ClCompile Include="esenas\parceo.cpp" />
     <ClCompile Include="render\imagen.cpp" />
     <ClCompile Include="render\pixel.cpp" />
     <ClCompile Include="ray_tracing\rayo.cpp" />
@@ -97,6 +98,7 @@
     <ClInclude Include="ecena\camara.h" />
     <ClInclude Include="ecena\eseena.h" />
     <ClInclude Include="luz.h" />
+    <ClInclude Include="esenas\parceo.h" />
     <ClInclude Include="render\imagen.h" />
     <ClInclude Include="render\pixel.h" />
     <ClInclude Include="ray_tracing\rayo.h" />
