--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj.filters
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj.filters
@@ -48,9 +48,9 @@
     <ClCompile Include="esenas\parceo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Xml Include="esenas\esena1.xml" />
+    <ClCompile Include="esenas\tinyxml2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ecena\eseena.h">
@@ -83,5 +83,59 @@
     <ClInclude Include="esenas\parceo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="esenas\tinyxml2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Debug\OpenGL-basico.tlog\link.command.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\CL.command.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\CL.read.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\Cl.items.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\CL.write.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\link.read.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\link.write.1.tlog" />
+    <None Include="Debug\OpenGL-basico.tlog\OpenGL-basico.lastbuildstate" />
+    <None Include="Debug\OpenGL-basico.tlog\unsuccessfulbuild" />
+    <None Include="Debug\OpenGL-basico.tlog\link.secondary.1.tlog" />
+    <None Include="Debug\OpenGL-basico.exe.recipe" />
+    <None Include="Debug\vc142.idb" />
+    <None Include="Debug\vc143.idb" />
+    <None Include="Debug\vc142.pdb" />
+    <None Include="Debug\vc143.pdb" />
+    <None Include="Release\OpenGL-basico.iobj" />
+    <None Include="Release\OpenGL-basico.exe.recipe" />
+    <None Include="Release\OpenGL-basico.ipdb" />
+    <None Include="Release\vc142.pdb" />
+    <None Include="Release\OpenGL-basico.tlog\link.command.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\CL.command.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\CL.read.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\CL.write.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\link.read.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\link.write.1.tlog" />
+    <None Include="Release\OpenGL-basico.tlog\OpenGL-basico.lastbuildstate" />
+    <None Include="Release\OpenGL-basico.tlog\OpenGL-basico.write.1u.tlog" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="Debug\camara.obj" />
+    <Object Include="Debug\eseena.obj" />
+    <Object Include="Debug\imagen.obj" />
+    <Object Include="Debug\luz.obj" />
+    <Object Include="Debug\main.obj" />
+    <Object Include="Debug\parceo.obj" />
+    <Object Include="Debug\rayo.obj" />
+    <Object Include="Debug\pixel.obj" />
+    <Object Include="Debug\renderr.obj" />
+    <Object Include="Debug\vector3.obj" />
+    <Object Include="Debug\vector2.obj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Debug\OpenGL-basico.Build.CppClean.log" />
+    <Text Include="Debug\OpenGL-basico.log" />
+    <Text Include="Debug\OpenGL-basico.vcxproj.FileListAbsolute.txt" />
+    <Text Include="Release\OpenGL-basico.Build.CppClean.log" />
+    <Text Include="Release\OpenGL-basico.log" />
+    <Text Include="Release\OpenGL-basico.vcxproj.FileListAbsolute.txt" />
+    <Text Include="Release\vcpkg.applocal.log" />
   </ItemGroup>
 </Project>
