--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
@@ -84,16 +84,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
+    <ClCompile Include="cil.cpp" />
     <ClCompile Include="objetos\cilindro.cpp" />
+    <ClCompile Include="objetos\objeto.cpp" />
+    <ClCompile Include="objetos\Esfera.cpp" />
+    <ClCompile Include="objetos\pared.cpp" />
+    <ClCompile Include="objetos\cili.cpp" />
+    <ClCompile Include="objetos\mesa.cpp" />
     <ClCompile Include="ecena\camara.cpp" />
     <ClCompile Include="ecena\eseena.cpp" />
     <ClCompile Include="esenas\tinyxml2.cpp" />
-    <ClCompile Include="objetos\Esfera.cpp" />
     <ClCompile Include="luz.cpp" />
     <ClCompile Include="esenas\parceo.cpp" />
-    <ClCompile Include="objetos\objeto.cpp" />
-    <ClCompile Include="objetos\pared.cpp" />
-    <ClCompile Include="objetos\mesa.cpp" />
     <ClCompile Include="render\imagen.cpp" />
     <ClCompile Include="render\pixel.cpp" />
     <ClCompile Include="ray_tracing\rayo.cpp" />
@@ -102,16 +104,18 @@
     <ClCompile Include="utilidades\vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cil.h" />
     <ClInclude Include="objetos\cilindro.h" />
+    <ClInclude Include="objetos\objeto.h" />
+    <ClInclude Include="objetos\Esfera.h" />
+    <ClInclude Include="objetos\pared.h" />
+    <ClInclude Include="objetos\cili.h" />
+    <ClInclude Include="objetos\mesa.h" />
     <ClInclude Include="ecena\camara.h" />
     <ClInclude Include="ecena\eseena.h" />
     <ClInclude Include="esenas\tinyxml2.h" />
-    <ClInclude Include="objetos\Esfera.h" />
     <ClInclude Include="luz.h" />
     <ClInclude Include="esenas\parceo.h" />
-    <ClInclude Include="objetos\pared.h" />
-    <ClInclude Include="objetos\objeto.h" />
-    <ClInclude Include="objetos\mesa.h" />
     <ClInclude Include="render\imagen.h" />
     <ClInclude Include="render\pixel.h" />
     <ClInclude Include="ray_tracing\rayo.h" />
