--- a/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
+++ b/obligatorio_2/OpenGL-basico/OpenGL-basico.vcxproj
@@ -72,6 +72,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)\Assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -84,12 +87,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
-    <ClCompile Include="cil.cpp" />
     <ClCompile Include="objetos\cilindro.cpp" />
     <ClCompile Include="objetos\esfera.cpp" />
     <ClCompile Include="objetos\objeto.cpp" />
     <ClCompile Include="objetos\pared.cpp" />
-    <ClCompile Include="objetos\cili.cpp" />
     <ClCompile Include="objetos\mesa.cpp" />
     <ClCompile Include="ecena\camara.cpp" />
     <ClCompile Include="ecena\eseena.cpp" />
@@ -100,16 +101,14 @@
     <ClCompile Include="render\pixel.cpp" />
     <ClCompile Include="ray_tracing\rayo.cpp" />
     <ClCompile Include="render\renderr.cpp" />
-    <ClCompile Include="utilidades\vector3.cpp" />
     <ClCompile Include="utilidades\vector2.cpp" />
+    <ClCompile Include="utilidades\vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cil.h" />
     <ClInclude Include="objetos\cilindro.h" />
     <ClInclude Include="objetos\esfera.h" />
     <ClInclude Include="objetos\objeto.h" />
     <ClInclude Include="objetos\pared.h" />
-    <ClInclude Include="objetos\cili.h" />
     <ClInclude Include="objetos\mesa.h" />
     <ClInclude Include="ecena\camara.h" />
     <ClInclude Include="ecena\eseena.h" />
@@ -120,8 +119,8 @@
     <ClInclude Include="render\pixel.h" />
     <ClInclude Include="ray_tracing\rayo.h" />
     <ClInclude Include="render\renderr.h" />
-    <ClInclude Include="utilidades\vector3.h" />
     <ClInclude Include="utilidades\vector2.h" />
+    <ClInclude Include="utilidades\vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
